kubernetes/canary/3-vs-v1_and_v2_50_50.yml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: service-c
spec:
  hosts:
  - service-c
  http:
  - route:
    - destination:
        host: service-c
        subset: version-v1
      weight: 50
    - destination:
        host: service-c
        subset: version-v2
      weight: 50
